--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Delete.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Delete.cshtml
@@ -13,7 +13,8 @@
 
     <form method="post">
         <input type="hidden" asp-for="Make.Id" />
+        <input type="hidden" asp-for="Make.TimeStamp" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <item-list></item-list>
     </form>
 </div>
