--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Edit.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Car.TimeStamp" />
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Save <i class="fas fa-save"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a asp-page="./Index" class="text-info">Back to List <i class="fas fa-list"></i></a>
+                <item-list></item-list>
             </div>
         </form>
     </div>
