--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Details.cshtml
@@ -11,6 +11,6 @@
     @Html.DisplayFor(x => x.Make)
 </div>
 <div>
-    <car-edit car-id="@Model.Make.Id"></car-edit> |
-    <a asp-page="./Index">Back to List</a>
+    <item-edit car-id="@Model.Make.Id"></item-edit> |
+    <item-list></item-list>
 </div>
