--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Create.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Create.cshtml
@@ -9,11 +9,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-page="Create">
+        <form asp-page="Create" asp-page-handler="CreateNewCar">
             @Html.EditorFor(x => x.Car, new { Makes = Model.Makes })
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Create <i class="fas fa-add"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
-                <a asp-page="./Index" class="text-info">Back to List <i class="fas fa-list"></i></a>
+                <item-list></item-list>
             </div>
         </form>
     </div>
