--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Partials/_CarListPartial.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Partials/_CarListPartial.cshtml
@@ -7,7 +7,7 @@
     }
 }
 <p>
-    <a asp-page="Create" class="text-success">Create New <i class="fas fa-plus"></i></a>
+    <item-create></item-create>
 </p>
 <table class="table">
     <thead>
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.PetName)
             </td>
             <td>
-                <car-edit car-id="@item.Id"></car-edit> |
-                <car-details car-id="@item.Id"></car-details> |
-                <car-delete car-id="@item.Id"></car-delete>
+                <item-edit car-id="@item.Id"></item-edit> |
+                <item-details car-id="@item.Id"></item-details> |
+                <item-delete car-id="@item.Id"></item-delete>
             </td>
         </tr>
     }
