cleaning up MVC app

--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Areas/Admin/Views/Makes/Delete.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Areas/Admin/Views/Makes/Delete.cshtml
@@ -22,6 +22,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <item-list></item-list>
     </form>
 </div>
