--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Delete.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Delete.cshtml
@@ -13,6 +13,6 @@
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="TimeStamp" />
         <button type="submit" class="btn btn-danger">Delete <i class="fas fa-trash"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a asp-action="Index" class="text-info">Back to List <i class="fas fa-list"></i></a>
+        <item-list></item-list>
     </form>
 </div>
