--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Details.cshtml
@@ -8,7 +8,7 @@
 @Html.DisplayForModel()
 @*@Html.DisplayForModel("CarWithColors")*@
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="text-warning">Edit <i class="fas fa-edit"></i></a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a asp-action="Delete" asp-route-id="@Model.Id" class="text-danger">Delete <i class="fas fa-trash"></i></a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a asp-action="Index" class="text-info">Back to List <i class="fas fa-list"></i></a>
+    <item-edit item-id="@Model.Id"></item-edit>
+    <item-delete item-id="@Model.Id"></item-delete>
+    <item-list></item-list>
 </div>
