--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Details.cshtml
@@ -11,8 +11,8 @@
 @Html.DisplayFor(m=>m.Car,"CarWithColors")
 
 <div>
-    <item-edit car-id="@Model.Car.Id"></item-edit> |
-    <item-delete car-id="@Model.Car.Id"></item-delete> |
+    <item-edit item-id="@Model.Car.Id"></item-edit> |
+    <item-delete item-id="@Model.Car.Id"></item-delete> |
     <item-list></item-list>
 </div>
 
