--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Index.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Index.cshtml
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <item-edit car-id="@item.Id"></item-edit> |
-                <item-details car-id="@item.Id"></item-details> |
-                <item-delete car-id="@item.Id"></item-delete>
+                <item-edit item-id="@item.Id"></item-edit> |
+                <item-details item-id="@item.Id"></item-details> |
+                <item-delete item-id="@item.Id"></item-delete>
             </td>
         </tr>
 }
