--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Partials/_CarListPartial.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Pages/Cars/Partials/_CarListPartial.cshtml
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.PetName)
             </td>
             <td>
-                <item-edit car-id="@item.Id"></item-edit> |
-                <item-details car-id="@item.Id"></item-details> |
-                <item-delete car-id="@item.Id"></item-delete>
+                <item-edit item-id="@item.Id"></item-edit> |
+                <item-details item-id="@item.Id"></item-details> |
+                <item-delete item-id="@item.Id"></item-delete>
             </td>
         </tr>
     }
