cleaned up the pages area

--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Create.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Create.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @Html.EditorFor(x=>x.Make)
+            @Html.EditorFor(x=>x.Entity)
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" /> | 
                 <item-list></item-list>
