--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Details.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/Areas/Admin/Pages/Makes/Details.cshtml
@@ -8,9 +8,9 @@
 <h1>Details</h1>
 
 <div>
-    @Html.DisplayFor(x => x.Make)
+    @Html.DisplayFor(x => x.Entity)
 </div>
 <div>
-    <item-edit item-id="@Model.Make.Id"></item-edit> |
+    <item-edit item-id="@Model.Entity.Id"></item-edit> |
     <item-list></item-list>
 </div>
