--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Shared/_CookieConsentPartial.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Shared/_CookieConsentPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Http.Features
 @using AutoLot.Mvc.Controllers
-@using AutoLot.Mvc.Extensions
+@using AutoLot.Services.Utilities
 
 @{
     var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
