cleaned up autolot

--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Create.cshtml
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Create.cshtml
@@ -8,7 +8,7 @@
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-controller="Cars" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.EditorForModel()
             <div class="form-group">
@@ -18,7 +18,6 @@
         </form>
     </div>
 </div>
-
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <partial name="_ValidationScriptsPartial" />
 }
