--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Edit.cshtml
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Edit.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-area="" asp-controller="Cars" asp-action="Edit" asp-route-id="@Model.Id">
             @Html.EditorForModel()
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="TimeStamp" />
