--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Shared/Partials/_Head.cshtml
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Shared/Partials/_Head.cshtml
@@ -1,6 +1,6 @@
 ﻿    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - AutoLot.Pages</title>
+    <title>@ViewData["Title"] - AutoLot.Mvc</title>
     <environment include="Development,Local">
         <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" asp-append-version="true"/>
     </environment>
