--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Shared/Partials/_Menu.cshtml
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Shared/Partials/_Menu.cshtml
@@ -22,6 +22,9 @@
                     <vc:menu/>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RazorSyntax">Razor Syntax <i class="fas fa-cut"></i></a>
                 </li>
                 <li class="nav-item">
