--- a/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Edit.cshtml
+++ b/.NETCore/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/Views/Cars/Edit.cshtml
@@ -15,6 +15,7 @@
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Save <i class="fas fa-save"></i></button>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <item-list></item-list>
+                <button type="submit" asp-action="Create">Index</button>
             </div>
         </form>
     </div>
