tweaked presentation code

--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/Views/Home/Validation.cshtml
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/Views/Home/Validation.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Validation">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div>
                 <label asp-for="Id" class="col-form-label"></label>
                 <input asp-for="Id" class="form-control" />
