--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/Views/Cars/Details.cshtml
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/Views/Cars/Details.cshtml
@@ -4,7 +4,8 @@
 }
 <h1>Details for @Model.PetName</h1>
 @Html.DisplayForModel()
-@*@Html.DisplayForModel("CarWithColors")*@
+<hr/>
+@Html.DisplayForModel("CarWithColors")
 <div>
     <item-edit item-id="@Model.Id"></item-edit>
     <item-delete item-id="@Model.Id"></item-delete>
