updated for SDD

--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/Views/Cars/DisplayTemplates/CarWithColors.cshtml
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Mvc/Views/Cars/DisplayTemplates/CarWithColors.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Car
+<hr />
+<div>
 <dl class="row">
     <dt class="col-sm-2">
         @Html.DisplayNameFor(model => model.MakeId)
@@ -37,3 +39,4 @@
         @Html.DisplayFor(model => model.IsDrivable)
     </dd>
 </dl>
+</div>
