--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/Pages/Privacy.cshtml
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/Pages/Privacy.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model PrivacyModel
 @{
+    Layout = "Shared/_Layout";
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
