updated package versions

--- a/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/Pages/Cars/Index.cshtml
+++ b/.NETCore/ASP.NETCore/v6.0/AutoLot/AutoLot.Web/Pages/Cars/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@page "{makeId?}/{makeName?}"
+@inject IWebHostEnvironment Env
 @model AutoLot.Web.Pages.Cars.IndexModel
 @{
     //ViewData["Title"] = "Inventory";
 }
+@Env.EnvironmentName
 @{ 
     if (Model.MakeId.HasValue)
     {
