--- a/.NETCore/ASP.NETCore/MVC/v8.0/AutoLot.Mvc/Views/Home/Index.cshtml
+++ b/.NETCore/ASP.NETCore/MVC/v8.0/AutoLot.Mvc/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model AutoLot.Services.ViewModels.DealerInfo
+@inject IOptionsMonitor<DealerInfo> _dealerInfoMonitor
 @{
     ViewData["Title"] = "Home Page";
+    var dealerInfo = _dealerInfoMonitor.CurrentValue;
 }
 
 <div class="text-center">
